Working on logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div data-note="Eb" class="key black"></div>
         <div data-note="E" class="key white"></div>
         <div data-note="F" class="key white"></div>
-        <div data-note="Gg" class="key black"></div>
+        <div data-note="Gb" class="key black"></div>
         <div data-note="G" class="key white"></div>
         <div data-note="Ab" class="key black"></div>
         <div data-note="A" class="key white"></div>
@@ -29,7 +29,7 @@
 
 
     <audio id="C" src="notes/C.mp3"></audio>
-    <audio id="Db" src="notes/Dd.mp3"></audio>
+    <audio id="Db" src="notes/Db.mp3"></audio>
     <audio id="D" src="notes/D.mp3"></audio>
     <audio id="Eb" src="notes/Eb.mp3"></audio>
     <audio id="E" src="notes/E.mp3"></audio>
